projects/ng-components/src/assets/styles/list-view.css
@layer components {
  .list-view-container {
    @apply flex flex-col border border-gray-200;
  }

  .list-view-container-inner {
    @apply overflow-hidden;
  }

  .list-view-table {
    @apply min-w-full divide-y divide-gray-200;
  }

  .list-view-thead {
    @apply bg-gray-50;
  }

  .list-view-th-details {
    @apply px-2 py-3 w-6 text-left text-xs font-medium text-gray-500 uppercase;
  }

  .list-view-th {
    @apply px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
  }

  .list-view-th-full {
    @apply w-full px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider whitespace-normal break-words;
  }

  .list-view-th-half {
    @apply w-full sm:w-1/2 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider whitespace-normal break-words;
  }

  .list-view-tbody {
    @apply bg-white divide-y divide-gray-200;
  }

  .list-view-tr {
    @apply hover:bg-gray-50;
  }

  .list-view-td-details {
    @apply px-2 py-2 whitespace-nowrap items-center;
  }

  .list-view-td {
    @apply px-6 py-4 whitespace-nowrap;
  }

  .list-view-td-full {
    @apply w-full px-6 py-4 whitespace-normal break-words;
  }

  .list-view-td-half {
    @apply w-full sm:w-1/2 px-6 py-4 whitespace-normal break-words;
  }

  .details-button {
    @apply inline-flex items-center px-3 py-2 border border-transparent shadow-sm text-sm leading-4 font-medium rounded-md bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-1 focus:ring-offset-1 focus:ring-gray-100;
  }

  .expand-collapse-button {
    @apply inline-flex items-center px-3 py-2 border border-transparent shadow-sm text-sm leading-4 font-medium rounded-md bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-1 focus:ring-offset-1 focus:ring-gray-100;  }
}

